[gd_scene load_steps=2 format=3 uid="uid://bwf3dlpc5h4ld"]

[ext_resource type="Script" path="res://scripts/login/login.gd" id="1_login"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_login")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Arc-Pub Login"
horizontal_alignment = 1

[node name="EmailInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Login"

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
horizontal_alignment = 1
